--- a/style.html
+++ b/style.html
@@ -18,6 +18,7 @@
             --bg-color: #F9FAFB;
             --border-color: #E5E7EB;
             --shadow-color: rgba(15, 23, 42, 0.08);
+            --sidebar-width-collapsed: 88px;
 
             /* Typography */
             --font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
@@ -4247,14 +4248,12 @@
             padding: 18px 0;
         }
         /* Responsividade */
-        @media (max-width: 1280px) {
-            :root {
-                --sidebar-width: 96px;
-            }
+        @media (min-width: 1025px) {
             .sidebar {
-                width: var(--sidebar-width);
-                overflow-y: auto;
+                width: var(--sidebar-width-collapsed);
                 align-items: center;
+                overflow: hidden;
+                transition: width 0.25s ease;
             }
             .sidebar-header {
                 padding: 18px 16px 14px;
@@ -4276,19 +4275,11 @@
                 line-height: 1.2;
                 border-left: none;
             }
-            .sidebar-menu a.active {
-                background-color: transparent;
-            }
             .sidebar-menu i {
                 margin-right: 0;
                 font-size: 1.15rem;
                 width: auto;
                 transition: transform 0.2s ease, color 0.2s ease, filter 0.2s ease;
-            }
-            .sidebar-menu a.active i {
-                color: #f4c542;
-                transform: scale(1.15);
-                filter: drop-shadow(0 2px 6px rgba(0, 0, 0, 0.35));
             }
             .sidebar-logout-button {
                 padding: 14px 0;
@@ -4297,8 +4288,40 @@
                 gap: 0;
             }
             .main-content {
+                margin-left: var(--sidebar-width-collapsed);
+                transition: margin-left 0.25s ease;
+            }
+            .sidebar:hover {
+                width: var(--sidebar-width);
+                align-items: flex-start;
+                box-shadow: 0 12px 32px rgba(0, 0, 0, 0.22);
+            }
+            .sidebar:hover .sidebar-header p,
+            .sidebar:hover .sidebar-title,
+            .sidebar:hover .sidebar-menu span,
+            .sidebar:hover .sidebar-logout-button span {
+                display: inline;
+            }
+            .sidebar:hover .sidebar-title {
+                display: inline-flex;
+            }
+            .sidebar:hover .sidebar-header p {
+                display: block;
+            }
+            .sidebar:hover .sidebar-menu a {
+                justify-content: flex-start;
+                gap: 10px;
+                padding: 12px 20px;
+                border-left: 4px solid transparent;
+            }
+            .sidebar:hover .sidebar-menu a.active {
+                background: color-mix(in srgb, white 8%, rgba(0, 0, 0, 0.12));
+            }
+            .sidebar:hover ~ .main-content {
                 margin-left: var(--sidebar-width);
             }
+        }
+        @media (max-width: 1280px) {
             .selector-control .selector-dropdown {
                 position: fixed;
                 left: calc(var(--sidebar-width) + 16px);
