--- a/style.html
+++ b/style.html
@@ -4253,7 +4253,7 @@
                 width: var(--sidebar-width-collapsed);
                 align-items: center;
                 overflow: hidden;
-                transition: width 0.35s cubic-bezier(0.4, 0.0, 0.2, 1), box-shadow 0.25s ease;
+                transition: width 0.25s ease;
             }
             .sidebar-header {
                 padding: 18px 16px 14px;
@@ -4262,13 +4262,7 @@
             .sidebar-title,
             .sidebar-menu span,
             .sidebar-logout-button span {
-                opacity: 0;
-                visibility: hidden;
-                max-width: 0;
-                transform: translateX(-6px);
-                white-space: nowrap;
-                overflow: hidden;
-                transition: opacity 0.25s ease, transform 0.25s ease, max-width 0.25s ease;
+                display: none;
             }
             .sidebar-menu a {
                 display: flex;
@@ -4280,14 +4274,11 @@
                 font-size: 1rem;
                 line-height: 1.2;
                 border-left: none;
-                width: 100%;
-                transition: padding 0.25s ease, background-color 0.25s ease, border-color 0.25s ease, color 0.25s ease;
             }
             .sidebar-menu i {
                 margin-right: 0;
                 font-size: 1.15rem;
-                width: 22px;
-                text-align: center;
+                width: auto;
                 transition: transform 0.2s ease, color 0.2s ease, filter 0.2s ease;
             }
             .sidebar-logout-button {
@@ -4295,13 +4286,10 @@
                 justify-content: center;
                 border: none;
                 gap: 0;
-                width: 100%;
-                box-shadow: none;
-                transition: padding 0.25s ease, background 0.25s ease, border-color 0.25s ease;
             }
             .main-content {
                 margin-left: var(--sidebar-width-collapsed);
-                transition: margin-left 0.35s cubic-bezier(0.4, 0.0, 0.2, 1);
+                transition: margin-left 0.25s ease;
             }
             .sidebar:hover {
                 width: var(--sidebar-width);
