--- a/index.html
+++ b/index.html
@@ -168,6 +168,13 @@
                         </div>
                         <div class="card-value" id="proximo-count">0</div>
                     </div>
+                    <div class="card contingencia">
+                        <div class="card-header">
+                            <div class="card-icon"><i class="fas fa-shield-alt"></i></div>
+                            <div class="card-title">Contingência</div>
+                        </div>
+                        <div class="card-value" id="contingencia-count">0</div>
+                    </div>
                     <div class="card vencido">
                         <div class="card-header">
                             <div class="card-icon"><i class="fas fa-times-circle"></i></div>
