--- a/style.html
+++ b/style.html
@@ -3,11 +3,37 @@
             /* Core palette */
             --primary-color: #3B82F6;
             --secondary-color: #10B981;
-            --success-color: #22C55E;
-            --warning-color: #F59E0B;
-            --danger-color: #EF4444;
+            --success-color: #5BA98C;
+            --warning-color: #C67B2A;
+            --danger-color: #8B1E3A;
             --primary-dark: #1D4ED8;
-            --danger-dark: #991B1B;
+            --danger-dark: #6A1227;
+
+            /* Status palette */
+            --livre-main: #5BA98C;
+            --livre-contrast: #1f3b33;
+            --livre-glass: color-mix(in srgb, var(--livre-main) 16%, white 84%);
+
+            --em-uso-base: #4F6F97;
+            --em-uso-contrast: #11223a;
+            --em-uso-border-color: color-mix(in srgb, var(--em-uso-base) 70%, #0d182b 30%);
+            --em-uso-card-bg: color-mix(in srgb, var(--em-uso-base) 20%, white 80%);
+            --em-uso-badge-bg: color-mix(in srgb, var(--em-uso-base) 60%, #0e182b 40%);
+            --em-uso-badge-text: color-mix(in srgb, #0d1b2f 80%, white 20%);
+            --em-uso-icon: color-mix(in srgb, var(--em-uso-base) 75%, #0c1a2e 25%);
+            --em-uso-text: color-mix(in srgb, #0f1f36 78%, white 22%);
+
+            --proximo-main: #C67B2A;
+            --proximo-contrast: #4b2c08;
+            --proximo-glow: color-mix(in srgb, var(--proximo-main) 40%, transparent);
+
+            --vencido-main: #8B1E3A;
+            --vencido-contrast: #3a0b16;
+            --vencido-strong: color-mix(in srgb, var(--vencido-main) 60%, #3a0b16 40%);
+
+            --contingencia-main: #52418F;
+            --contingencia-contrast: #241b46;
+            --contingencia-glass: color-mix(in srgb, var(--contingencia-main) 18%, white 82%);
 
             /* Neutrals */
             --dark-color: #1F2937;
@@ -26,13 +52,6 @@
             /* Misc */
             --focus-ring: rgba(59, 130, 246, 0.25);
             --sidebar-width: 250px;
-            --em-uso-base: #c6cacf;
-            --em-uso-border-color: color-mix(in srgb, #c6cacf 70%, #000929 30%);
-            --em-uso-card-bg: color-mix(in srgb, #c6cacf 92%, white 8%);
-            --em-uso-badge-bg: color-mix(in srgb, #c6cacf 70%, #000929 30%);
-            --em-uso-badge-text: #000929;
-            --em-uso-icon: #8D929F;
-            --em-uso-text: #000929;
             --extended-badge-bg: color-mix(in srgb, var(--primary-color) 14%, white 86%);
             --extended-badge-text: color-mix(in srgb, var(--primary-color) 80%, black 20%);
             --extended-row-bg: color-mix(in srgb, var(--primary-color) 10%, white 90%);
@@ -1276,35 +1295,50 @@
             box-shadow: 0 18px 36px var(--shadow-color);
         }
         .card.livre {
-            border-top: 4px solid var(--success-color);
+            border: 1px solid color-mix(in srgb, var(--livre-main) 35%, transparent);
+            border-top: 5px solid var(--livre-main);
+            background: linear-gradient(160deg, var(--livre-glass), color-mix(in srgb, var(--livre-main) 12%, white 88%));
+            color: var(--livre-contrast);
+            box-shadow: 0 14px 30px color-mix(in srgb, var(--livre-main) 18%, var(--shadow-color) 82%);
         }
         .card.em-uso {
             position: relative;
-            border-top: 4px solid var(--em-uso-border-color);
-            background: radial-gradient(circle at 50% 40%,
-                    color-mix(in srgb, var(--em-uso-card-bg) 30%, white 70%) 0%,
-                    color-mix(in srgb, var(--em-uso-card-bg) 60%, white 40%) 38%,
-                    color-mix(in srgb, var(--em-uso-card-bg) 82%, white 18%) 58%,
-                    var(--em-uso-card-bg) 100%);
+            border: 1px solid color-mix(in srgb, var(--em-uso-border-color) 65%, transparent);
+            border-top: 5px solid var(--em-uso-border-color);
+            background: radial-gradient(circle at 20% 24%, color-mix(in srgb, var(--em-uso-card-bg) 62%, white 38%) 0%, color-mix(in srgb, var(--em-uso-card-bg) 82%, white 18%) 46%, var(--em-uso-card-bg) 88% 100%);
             color: var(--em-uso-text);
             overflow: hidden;
+            box-shadow: 0 14px 30px color-mix(in srgb, var(--em-uso-border-color) 24%, var(--shadow-color) 76%);
         }
         .card.em-uso::before {
             content: "";
             position: absolute;
             inset: 0;
             background-image:
-                radial-gradient(circle at 20% 20%, rgba(255, 255, 255, 0.08) 1px, transparent 0),
-                radial-gradient(circle at 80% 60%, rgba(255, 255, 255, 0.06) 1.2px, transparent 0);
+                radial-gradient(circle at 18% 22%, rgba(255, 255, 255, 0.08) 1px, transparent 0),
+                radial-gradient(circle at 82% 66%, rgba(255, 255, 255, 0.06) 1.2px, transparent 0);
             background-size: 32px 32px, 26px 26px;
-            opacity: 0.16;
+            opacity: 0.18;
             pointer-events: none;
         }
         .card.proximo {
-            border-top: 4px solid var(--warning-color);
+            border: 2px solid var(--proximo-main);
+            background: linear-gradient(140deg, color-mix(in srgb, var(--proximo-main) 14%, white 86%), color-mix(in srgb, var(--proximo-main) 26%, white 74%));
+            box-shadow: 0 16px 32px color-mix(in srgb, var(--proximo-main) 28%, var(--shadow-color) 72%);
+            color: var(--proximo-contrast);
         }
         .card.vencido {
-            border-top: 4px solid var(--danger-color);
+            border: 2px solid var(--vencido-strong);
+            background: linear-gradient(145deg, color-mix(in srgb, var(--vencido-main) 18%, white 82%), color-mix(in srgb, var(--vencido-main) 32%, white 68%));
+            box-shadow: 0 18px 36px color-mix(in srgb, var(--vencido-main) 32%, var(--shadow-color) 68%);
+            color: color-mix(in srgb, var(--vencido-contrast) 76%, white 24%);
+        }
+        .card.contingencia {
+            border: 1px dashed color-mix(in srgb, var(--contingencia-main) 50%, transparent);
+            border-top: 5px solid var(--contingencia-main);
+            background: linear-gradient(160deg, var(--contingencia-glass), color-mix(in srgb, var(--contingencia-main) 12%, white 88%));
+            color: var(--contingencia-contrast);
+            box-shadow: 0 14px 30px color-mix(in srgb, var(--contingencia-main) 22%, var(--shadow-color) 78%);
         }
         .card-header {
             display: flex;
@@ -1316,23 +1350,24 @@
         }
         .card-title {
             font-size: 1rem;
-            font-weight: 600;
-            color: var(--dark-color);
+            font-weight: 700;
+            color: inherit;
             text-align: center;
         }
         .card-icon {
             font-size: 1.6rem;
             color: var(--primary-color);
         }
-        .card.livre .card-icon   { color: var(--success-color); }
+        .card.livre .card-icon   { color: var(--livre-main); }
         .card.em-uso .card-icon  { color: var(--em-uso-icon); }
-        .card.proximo .card-icon { color: var(--warning-color); }
-        .card.vencido .card-icon { color: var(--danger-color); }
+        .card.proximo .card-icon { color: var(--proximo-main); }
+        .card.vencido .card-icon { color: var(--vencido-main); }
+        .card.contingencia .card-icon { color: var(--contingencia-main); }
         .card-value {
             font-size: 2rem;
             font-weight: bold;
             margin-bottom: 0;
-            color: var(--dark-color);
+            color: inherit;
         }
         .card-description {
             font-size: 0.9rem;
@@ -1400,10 +1435,10 @@
             background: linear-gradient(135deg, color-mix(in srgb, var(--primary-color) 90%, white 10%), color-mix(in srgb, var(--primary-dark) 68%, var(--primary-color) 32%));
         }
         .filter-btn[data-filter="livre"].active {
-            background: linear-gradient(135deg, color-mix(in srgb, var(--success-color) 20%, transparent), color-mix(in srgb, var(--success-color) 28%, #ffffff));
-            border-color: color-mix(in srgb, var(--success-color) 55%, transparent);
-            color: var(--success-color);
-            box-shadow: 0 14px 28px color-mix(in srgb, var(--success-color) 18%, var(--shadow-color) 82%);
+            background: linear-gradient(135deg, color-mix(in srgb, var(--livre-main) 20%, transparent), color-mix(in srgb, var(--livre-main) 28%, #ffffff));
+            border-color: color-mix(in srgb, var(--livre-main) 55%, transparent);
+            color: var(--livre-main);
+            box-shadow: 0 14px 28px color-mix(in srgb, var(--livre-main) 18%, var(--shadow-color) 82%);
         }
         .filter-btn[data-filter="em-uso"].active {
             background: linear-gradient(135deg, color-mix(in srgb, var(--em-uso-card-bg) 70%, white 30%), color-mix(in srgb, var(--em-uso-border-color) 52%, var(--em-uso-card-bg) 48%));
@@ -1412,17 +1447,18 @@
             box-shadow: 0 14px 28px color-mix(in srgb, var(--em-uso-border-color) 24%, var(--shadow-color) 76%);
         }
         .filter-btn[data-filter="proximo"].active {
-            background: linear-gradient(135deg, color-mix(in srgb, var(--warning-color) 88%, white 12%), color-mix(in srgb, var(--warning-color) 72%, #b45309 28%));
-            color: color-mix(in srgb, #7a3b00 38%, white 62%);
+            background: linear-gradient(135deg, color-mix(in srgb, var(--proximo-main) 84%, white 16%), color-mix(in srgb, var(--proximo-main) 70%, #7c480f 30%));
+            color: color-mix(in srgb, #4b2c08 46%, white 54%);
         }
         .filter-btn[data-filter="vencido"].active {
-            background: linear-gradient(135deg, color-mix(in srgb, var(--danger-color) 90%, white 10%), color-mix(in srgb, var(--danger-dark) 75%, var(--danger-color) 25%));
+            background: linear-gradient(135deg, color-mix(in srgb, var(--vencido-main) 90%, white 10%), color-mix(in srgb, var(--vencido-strong) 78%, var(--vencido-main) 22%));
+            color: color-mix(in srgb, var(--vencido-contrast) 60%, white 40%);
         }
         .filter-btn[data-filter="contingencia"].active {
-            background: color-mix(in srgb, var(--primary-color) 10%, var(--surface-color) 90%);
-            border: 1px dashed color-mix(in srgb, var(--primary-color) 30%, var(--border-color));
-            color: color-mix(in srgb, var(--primary-color) 75%, var(--dark-color) 25%);
-            box-shadow: 0 14px 28px color-mix(in srgb, var(--primary-color) 18%, var(--shadow-color) 82%);
+            background: color-mix(in srgb, var(--contingencia-main) 14%, var(--surface-color) 86%);
+            border: 1px dashed color-mix(in srgb, var(--contingencia-main) 34%, var(--border-color));
+            color: color-mix(in srgb, var(--contingencia-main) 78%, var(--dark-color) 22%);
+            box-shadow: 0 14px 28px color-mix(in srgb, var(--contingencia-main) 18%, var(--shadow-color) 82%);
         }
         .filter-search {
             position: relative;
@@ -1626,12 +1662,12 @@
             box-shadow: 0 14px 32px color-mix(in srgb, var(--em-uso-border-color) 30%, transparent);
         }
         .armario-card.contingencia {
-            border-left-color: color-mix(in srgb, var(--dark-color) 25%, var(--primary-color) 75%);
+            border-left-color: color-mix(in srgb, var(--contingencia-main) 80%, var(--contingencia-contrast) 20%);
             background: repeating-linear-gradient(135deg,
-                color-mix(in srgb, var(--surface-color) 97%, var(--primary-color) 3%) 0,
-                color-mix(in srgb, var(--surface-color) 97%, var(--primary-color) 3%) 10px,
-                color-mix(in srgb, var(--surface-color) 95%, var(--primary-color) 5%) 10px,
-                color-mix(in srgb, var(--surface-color) 95%, var(--primary-color) 5%) 20px);
+                color-mix(in srgb, var(--surface-color) 96%, var(--contingencia-main) 4%) 0,
+                color-mix(in srgb, var(--surface-color) 96%, var(--contingencia-main) 4%) 10px,
+                color-mix(in srgb, var(--surface-color) 94%, var(--contingencia-main) 6%) 10px,
+                color-mix(in srgb, var(--surface-color) 94%, var(--contingencia-main) 6%) 20px);
             background-blend-mode: multiply;
             position: relative;
             overflow: hidden;
@@ -1643,17 +1679,17 @@
             background-image: radial-gradient(circle at 20% 20%, rgba(0,0,0,0.06) 1px, transparent 0),
                 radial-gradient(circle at 80% 60%, rgba(0,0,0,0.04) 1px, transparent 0);
             background-size: 18px 18px, 22px 22px;
-            opacity: 0.4;
+            opacity: 0.38;
             pointer-events: none;
         }
         .armario-card.contingencia .armario-number {
-            color: color-mix(in srgb, var(--primary-dark) 70%, white 30%);
+            color: color-mix(in srgb, var(--contingencia-contrast) 68%, white 32%);
         }
         .armario-card.proximo {
-            border-left-color: var(--warning-color);
+            border-left-color: var(--proximo-main);
         }
         .armario-card.vencido {
-            border-left-color: var(--danger-color);
+            border-left-color: var(--vencido-main);
         }
         .armario-card:hover {
             box-shadow: 0 18px 36px var(--shadow-color);
@@ -1785,8 +1821,8 @@
             font-weight: bold;
         }
         .status-livre {
-            background-color: color-mix(in srgb, var(--success-color) 18%, transparent);
-            color: var(--success-color);
+            background-color: color-mix(in srgb, var(--livre-main) 18%, transparent);
+            color: var(--livre-main);
         }
         .status-em-uso {
             background-color: color-mix(in srgb, var(--em-uso-badge-bg) 22%, transparent);
@@ -1803,17 +1839,17 @@
             box-shadow: 0 0 0 2px color-mix(in srgb, var(--em-uso-border-color) 35%, transparent);
         }
         .status-proximo {
-            background-color: color-mix(in srgb, var(--warning-color) 20%, transparent);
-            color: var(--warning-color);
+            background-color: color-mix(in srgb, var(--proximo-main) 20%, transparent);
+            color: var(--proximo-main);
         }
         .status-vencido {
-            background-color: color-mix(in srgb, var(--danger-color) 18%, transparent);
-            color: var(--danger-color);
+            background-color: color-mix(in srgb, var(--vencido-main) 18%, transparent);
+            color: var(--vencido-main);
         }
         .status-contingencia {
-            background-color: color-mix(in srgb, var(--primary-color) 14%, transparent);
-            color: color-mix(in srgb, var(--primary-dark) 82%, var(--dark-color) 18%);
-            border: 1px dashed color-mix(in srgb, var(--primary-color) 45%, transparent);
+            background-color: color-mix(in srgb, var(--contingencia-main) 18%, transparent);
+            color: color-mix(in srgb, var(--contingencia-contrast) 80%, white 20%);
+            border: 1px dashed color-mix(in srgb, var(--contingencia-main) 45%, transparent);
         }
         .armario-details {
             font-size: 0.9rem;
